# obook

./: BaseOrderbook.py  README.md  ZmqOrderbook.py
Messaging/: Patterns.py
cpp_obook/: CMakeLists.txt  README.MD  orderbook.cpp  orderbook.hpp  orderbook_python_funcs.cpp  orderbook_wrapper.cpp  pylib.cpp  sidebook.cpp  sidebook.hpp  sidebook_python_funcs.cpp
cpp_obook/cmake/Modules/: BuildBoost.cmake
